Added selection of a storage provider when moving media files to a new storage location

--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -448,6 +448,7 @@
     <Content Include="Content\filemanager\css\jquery-ui-1.10.4.custom.min.css" />
     <Content Include="Content\filemanager\css\main.css" />
     <Content Include="Content\filemanager\css\main.min.css" />
+    <Content Include="Content\filemanager\dev.html" />
     <Content Include="Content\filemanager\images\action-folder-paste.png" />
     <Content Include="Content\filemanager\images\action-folder-rename.png" />
     <Content Include="Content\filemanager\images\arrow_down.png" />
@@ -516,6 +517,7 @@
     <Content Include="Content\filemanager\images\filetypes\big\file_extension_mid.png" />
     <Content Include="Content\filemanager\images\filetypes\big\file_extension_mov.png" />
     <Content Include="Content\filemanager\images\filetypes\big\file_extension_mp2.png" />
+    <Content Include="Content\filemanager\images\filetypes\big\file_extension_mp3.png" />
     <Content Include="Content\filemanager\images\filetypes\big\file_extension_mp4.png" />
     <Content Include="Content\filemanager\images\filetypes\big\file_extension_mpeg.png" />
     <Content Include="Content\filemanager\images\filetypes\big\file_extension_mpg.png" />
@@ -615,6 +617,7 @@
     <Content Include="Content\filemanager\images\filetypes\file_extension_mid.png" />
     <Content Include="Content\filemanager\images\filetypes\file_extension_mov.png" />
     <Content Include="Content\filemanager\images\filetypes\file_extension_mp2.png" />
+    <Content Include="Content\filemanager\images\filetypes\file_extension_mp3.png" />
     <Content Include="Content\filemanager\images\filetypes\file_extension_mp4.png" />
     <Content Include="Content\filemanager\images\filetypes\file_extension_mpeg.png" />
     <Content Include="Content\filemanager\images\filetypes\file_extension_mpg.png" />
@@ -671,9 +674,14 @@
     <Content Include="Content\filemanager\images\loading.gif" />
     <Content Include="Content\filemanager\images\paste.png" />
     <Content Include="Content\filemanager\images\preview.png" />
+    <Content Include="Content\filemanager\images\remove-upload - Copy.png" />
+    <Content Include="Content\filemanager\images\remove-upload.png" />
     <Content Include="Content\filemanager\images\rename.png" />
     <Content Include="Content\filemanager\images\search.png" />
     <Content Include="Content\filemanager\images\select.png" />
+    <Content Include="Content\filemanager\images\sprite.png" />
+    <Content Include="Content\filemanager\images\stripes-reverse.gif" />
+    <Content Include="Content\filemanager\images\stripes.gif" />
     <Content Include="Content\filemanager\images\upload-big.png" />
     <Content Include="Content\filemanager\images\view-list.png" />
     <Content Include="Content\filemanager\images\view-tile.png" />
@@ -683,6 +691,8 @@
     <Content Include="Content\filemanager\js\file.js" />
     <Content Include="Content\filemanager\js\filetypes.js" />
     <Content Include="Content\filemanager\js\jquery-1.10.2.min.js" />
+    <Content Include="Content\filemanager\js\jquery-1.11.1.min.js" />
+    <Content Include="Content\filemanager\js\jquery-2.1.1.min.js" />
     <Content Include="Content\filemanager\js\jquery-dateFormat.min.js" />
     <Content Include="Content\filemanager\js\jquery-ui-1.10.4.custom.min.js" />
     <Content Include="Content\filemanager\js\main.js" />
@@ -691,6 +701,7 @@
     <Content Include="Content\filemanager\js\tiny_mce_popup.js" />
     <Content Include="Content\filemanager\js\utils.js" />
     <Content Include="Content\filemanager\LICENSE.txt" />
+    <Content Include="Content\filemanager\third-party.txt" />
     <Content Include="Content\images\ajax_loader_small.gif" />
     <Content Include="Content\images\checkmark.png" />
     <Content Include="Content\images\google-maps.gif" />
@@ -724,11 +735,23 @@
     <Content Include="favicon.ico" />
     <Content Include="Scripts\admin.common.js" />
     <Content Include="Content\filemanager\conf.json" />
-    <Content Include="Content\filemanager\js\fileman-modified.zip" />
     <Content Include="Content\filemanager\lang\bg.json" />
     <Content Include="Content\filemanager\lang\de.json" />
     <Content Include="Content\filemanager\lang\en.json" />
     <Content Include="Content\filemanager\lang\fr.json" />
+    <Content Include="Content\filemanager\lang\ca.json" />
+    <Content Include="Content\filemanager\lang\cs.json" />
+    <Content Include="Content\filemanager\lang\cs1.json" />
+    <Content Include="Content\filemanager\lang\da.json" />
+    <Content Include="Content\filemanager\lang\es.json" />
+    <Content Include="Content\filemanager\lang\hu.json" />
+    <Content Include="Content\filemanager\lang\it.json" />
+    <Content Include="Content\filemanager\lang\nl.json" />
+    <Content Include="Content\filemanager\lang\pl.json" />
+    <Content Include="Content\filemanager\lang\pt.json" />
+    <Content Include="Content\filemanager\lang\ru.json" />
+    <Content Include="Content\filemanager\lang\sk.json" />
+    <Content Include="Content\filemanager\lang\tr.json" />
     <None Include="Scripts\jquery-1.8.3.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.3.js" />
     <Content Include="Scripts\jquery-1.8.3.min.js" />
