--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -243,10 +243,12 @@
     <Compile Include="Media\Storage\FileSystemMediaStorageProvider.cs" />
     <Compile Include="Media\Storage\IMediaStorageProvider.cs" />
     <Compile Include="Media\MediaExtensions.cs" />
-    <Compile Include="Media\Storage\IMediaStorageMover.cs" />
+    <Compile Include="Media\Storage\IMediaMover.cs" />
+    <Compile Include="Media\Storage\ISupportsMediaMoving.cs" />
+    <Compile Include="Media\Storage\MediaMoverContext.cs" />
     <Compile Include="Media\Storage\MediaStorageExtensions.cs" />
-    <Compile Include="Media\Storage\MediaStorageItem.cs" />
-    <Compile Include="Media\Storage\MediaStorageMover.cs" />
+    <Compile Include="Media\Storage\MediaItem.cs" />
+    <Compile Include="Media\Storage\MediaMover.cs" />
     <Compile Include="Media\TransientMediaClearTask.cs" />
     <Compile Include="Messages\Importer\NewsLetterSubscriptionImporter.cs" />
     <Compile Include="Messages\QueuedMessagesClearTask.cs" />
