--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -417,6 +417,10 @@
     <Compile Include="Migrations\201607271034220_MediaBinaryData.Designer.cs">
       <DependentUpon>201607271034220_MediaBinaryData.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201608100950111_ManufacturerDiscounts.cs" />
+    <Compile Include="Migrations\201608100950111_ManufacturerDiscounts.Designer.cs">
+      <DependentUpon>201608100950111_ManufacturerDiscounts.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
@@ -773,6 +777,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201607271034220_MediaBinaryData.resx">
       <DependentUpon>201607271034220_MediaBinaryData.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201608100950111_ManufacturerDiscounts.resx">
+      <DependentUpon>201608100950111_ManufacturerDiscounts.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
