--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -126,7 +126,7 @@
     <Compile Include="Mapping\DataExchange\ExportDeploymentMap.cs" />
     <Compile Include="Mapping\Directory\QuantityUnitMap.cs" />
     <Compile Include="Mapping\DataExchange\ExportProfileMap.cs" />
-    <Compile Include="Mapping\Media\BinaryDataMap.cs" />
+    <Compile Include="Mapping\Media\MediaStorageMap.cs" />
     <Compile Include="Mapping\Messages\QueuedEmailAttachmentMap.cs" />
     <Compile Include="Mapping\Payments\PaymentMethodMap.cs" />
     <Compile Include="Migrations\201403112331027_Initial.cs" />
@@ -413,13 +413,9 @@
     <Compile Include="Migrations\201607111649138_FixExportDeploymentIsPublic.Designer.cs">
       <DependentUpon>201607111649138_FixExportDeploymentIsPublic.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201607271034220_MediaBinaryData.cs" />
-    <Compile Include="Migrations\201607271034220_MediaBinaryData.Designer.cs">
-      <DependentUpon>201607271034220_MediaBinaryData.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201608100950111_ManufacturerDiscounts.cs" />
-    <Compile Include="Migrations\201608100950111_ManufacturerDiscounts.Designer.cs">
-      <DependentUpon>201608100950111_ManufacturerDiscounts.cs</DependentUpon>
+    <Compile Include="Migrations\201608110948010_MediaStorageData.cs" />
+    <Compile Include="Migrations\201608110948010_MediaStorageData.Designer.cs">
+      <DependentUpon>201608110948010_MediaStorageData.cs</DependentUpon>
     </Compile>
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
@@ -775,11 +771,8 @@
     <EmbeddedResource Include="Migrations\201607111649138_FixExportDeploymentIsPublic.resx">
       <DependentUpon>201607111649138_FixExportDeploymentIsPublic.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201607271034220_MediaBinaryData.resx">
-      <DependentUpon>201607271034220_MediaBinaryData.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201608100950111_ManufacturerDiscounts.resx">
-      <DependentUpon>201608100950111_ManufacturerDiscounts.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201608110948010_MediaStorageData.resx">
+      <DependentUpon>201608110948010_MediaStorageData.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
