Added async method overloads to all relevant media stuff (FileSystem, PictureService, ImageCache etc.)

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -122,6 +122,11 @@
     <httpModules />
     <httpRuntime targetFramework="4.5.1" maxRequestLength="1536000" executionTimeout="5400" maxQueryStringLength="16384" />
   </system.web>
+  <system.net>
+    <connectionManagement>
+      <add address="*" maxconnection="100" />
+    </connectionManagement>
+  </system.net>
   <system.webServer>
     <!-- Show custom 404/500 error page for unmanaged (static) resources. -->
     <httpErrors errorMode="DetailedLocalOnly" defaultResponseMode="File">
