--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -204,8 +204,8 @@
     <Compile Include="Infrastructure\DependencyManagement\DefaultLifetimeScopeProvider.cs" />
     <Compile Include="Infrastructure\DependencyManagement\ILifetimeScopeAccessor.cs" />
     <Compile Include="Infrastructure\DependencyManagement\Work.cs" />
-    <Compile Include="Infrastructure\HostNameProvider.cs" />
-    <Compile Include="Infrastructure\IHostNameProvider.cs" />
+    <Compile Include="Infrastructure\ApplicationEnvironment.cs" />
+    <Compile Include="Infrastructure\IApplicationEnvironment.cs" />
     <Compile Include="IO\IFileSystemExtensions.cs" />
     <Compile Include="ITransient.cs" />
     <Compile Include="Collections\MostRecentlyUsedList.cs" />
