--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -810,6 +810,7 @@
     <Content Include="Content\bootstrap\custom\spinner.less" />
     <Content Include="Media\Thumbs\placeholder.txt" />
     <Content Include="Config\ConnectionStrings.config" />
+    <Content Include="Config\SessionState.config" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Scripts\globalize\cultures\globalize.culture.ar-AE.js" />
     <Content Include="Scripts\globalize\cultures\globalize.culture.ar-BH.js" />
