--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -93,7 +93,7 @@
   </appSettings>
   <system.web>
     <customErrors mode="RemoteOnly" />
-    <sessionState mode="InProc" />
+    <sessionState configSource="Config\SessionState.config" />
     <trace enabled="true" localOnly="true" pageOutput="true" requestLimit="40" />
     <compilation debug="true" targetFramework="4.5.1" batch="true" optimizeCompilations="true">
       <assemblies>
