--- a/src/Presentation/SmartStore.Web/Config/ConnectionStrings.config
+++ b/src/Presentation/SmartStore.Web/Config/ConnectionStrings.config
@@ -12,6 +12,7 @@
   <add name="SmartStore.Redis.MessageBus" connectionString="localhost" />
   <add name="SmartStore.Redis.Cache" connectionString="localhost" />
   <add name="SmartStore.Redis.OutputCache" connectionString="localhost" />
+  <add name="SmartStore.Redis.Session" connectionString="localhost" />
   -->
 
   <!--
