--- a/src/Presentation/SmartStore.Web/Config/SessionState.config
+++ b/src/Presentation/SmartStore.Web/Config/SessionState.config
@@ -2,37 +2,12 @@
 <!-- To activate the Redis session state provider, just change the mode attribute from 'InProc' to 'Custom'. -->
 <sessionState mode="InProc" customProvider="RedisSessionStateStore">
   <providers>
-    <!-- For more details check https://github.com/Azure/aspnet-redis-providers/wiki -->
-    <!-- Either use 'connectionString' OR 'settingsClassName' and 'settingsMethodName' OR use 'host','port','accessKey','ssl','connectionTimeoutInMilliseconds' and 'operationTimeoutInMilliseconds'. -->
-    <!-- 'throwOnError','retryTimeoutInMilliseconds','databaseId' and 'applicationName' can be used with both options. -->
-    <!--
-      <add name="RedisSessionStateStore" 
-        host = "127.0.0.1" [String]
-        port = "" [number]
-        accessKey = "" [String]
-        ssl = "false" [true|false]
-        throwOnError = "true" [true|false]
-        retryTimeoutInMilliseconds = "5000" [number]
-        databaseId = "0" [number]
-        applicationName = "" [String]
-        connectionTimeoutInMilliseconds = "5000" [number]
-        operationTimeoutInMilliseconds = "1000" [number]
-        connectionString = "<Valid StackExchange.Redis connection string>" [String]
-        settingsClassName = "<Assembly qualified class name that contains settings method specified below. Which basically return 'connectionString' value>" [String]
-        settingsMethodName = "<Settings method should be defined in settingsClass. It should be public, static, does not take any parameters and should have a return type of 'String', which is basically 'connectionString' value.>" [String]
-        loggingClassName = "<Assembly qualified class name that contains logging method specified below>" [String]
-        loggingMethodName = "<Logging method should be defined in loggingClass. It should be public, static, does not take any parameters and should have a return type of System.IO.TextWriter.>" [String]
-        redisSerializerType = "<Assembly qualified class name that implements Microsoft.Web.Redis.ISerializer>" [String]
-      />
+    <!-- 
+      The Redis connection string used by RedisSessionStateProvider is being resolved in this particular order:
+        1.) The named connection string "SmartStore.Redis.Session"
+        2.) The named connection string "SmartStore.Redis"
+        3.) localhost
     -->
-    <add name="RedisSessionStateStore" 
-         type="Microsoft.Web.Redis.RedisSessionStateProvider"
-         redisSerializerType="SmartStore.Redis.SessionState.SessionStateSerializer, SmartStore.Redis"
-         x-connectionString="SmartStore.Redis.Session"
-         applicationName="session:"
-         host="localhost"
-         databaseId="1"
-         accessKey="" 
-         ssl="false" />
+    <add name="RedisSessionStateStore" type="SmartStore.Redis.SessionState.RedisSessionStateProvider, SmartStore.Redis" />
   </providers>
 </sessionState>
