--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -388,6 +388,18 @@
     <Compile Include="Caching\ICacheManager.cs" />
     <Compile Include="Caching\NullCache.cs" />
     <Compile Include="Plugins\LoadPluginResult.cs" />
+    <Compile Include="Search\IIndexDocument.cs" />
+    <Compile Include="Search\IIndexProvider.cs" />
+    <Compile Include="Search\IIndexStore.cs" />
+    <Compile Include="Search\IndexField.cs" />
+    <Compile Include="Search\ISearchBits.cs" />
+    <Compile Include="Search\ISearchEngine.cs" />
+    <Compile Include="Search\ISearchHit.cs" />
+    <Compile Include="Search\ISearchQuery.cs" />
+    <Compile Include="Search\NullIndexStore.cs" />
+    <Compile Include="Search\SearchFilter.cs" />
+    <Compile Include="Search\SearchQuery.cs" />
+    <Compile Include="Search\SearchSort.cs" />
     <Compile Include="Security\SmartStorePrincipal.cs" />
     <Compile Include="Themes\DefaultThemeRegistry.cs" />
     <Compile Include="Themes\ThemeFolderData.cs" />
