--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -485,7 +485,8 @@
     <Compile Include="Customers\PasswordChangeResult.cs" />
     <Compile Include="Hooks\AclEntityPostDeleteHook.cs" />
     <Compile Include="Search\DefaultIndexingService.cs" />
-    <Compile Include="Search\IIndexAgent.cs" />
+    <Compile Include="Search\IIndexCollector.cs" />
+    <Compile Include="Search\IIndexDataSegmenter.cs" />
     <Compile Include="Search\IIndexingService.cs" />
     <Compile Include="Search\IndexInfo.cs" />
     <Compile Include="Security\AclService.cs" />
