--- a/src/Presentation/SmartStore.Web/Config/SessionState.config
+++ b/src/Presentation/SmartStore.Web/Config/SessionState.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!-- To activate the Redis session state provider, just change the mode attribute from 'InProc' to 'Custom'. -->
-<sessionState mode="InProc" customProvider="RedisSessionStateStore">
+<sessionState mode="InProc" customProvider="RedisSessionStateStore" stateConnectionString="tcpip=loopback:42424" cookieless="false" timeout="10">
   <providers>
     <!-- 
       The Redis connection string used by RedisSessionStateProvider is being resolved in this particular order:
