--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -417,6 +417,7 @@
     <Compile Include="Migrations\201608110948010_MediaStorageData.Designer.cs">
       <DependentUpon>201608110948010_MediaStorageData.cs</DependentUpon>
     </Compile>
+    <Compile Include="ObjectContextBase.SaveChanges.cs" />
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
