--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -80,7 +80,9 @@
     <add key="sm:EnableLegacyRoutesMapping" value="true" />
     <add key="sm:ClearPluginsShadowDirectoryOnStartup" value="false" />
     <add key="sm:TempDirectory" value="~/App_Data/_temp" />
-    <add key="sm:BizImportMediaDirectory" value="~/Media/Uploaded/static" />
+    <add key="sm:MediaBasePath" value="Media" />
+    <add key="sm:MediaPublicUrl" value="~/Media" />
+    <add key="sm:BizImportMediaDirectory" value="Uploaded/static" />
     <add key="sm:PluginsIgnoredDuringInstallation" value="SmartStore.DemoShopControlling, SmartStore.WebApi, SmartStore.Glimpse" />
     <!-- Task Scheduler sweep interval in minutes (1 recommended) -->
     <add key="sm:TaskSchedulerSweepInterval" value="1" />
