--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -65,6 +65,7 @@
     <add key="GoogleMerchantKey" value="" />
     <add key="GoogleEnvironment" value="Sandbox" />
     <add key="GoogleAuthenticateCallback" value="True" />
+    <add key="log4net.Config" value="Config\log4net.config" />
     <add key="sm:ApplicationName" value="SmartStore.NET" />
     <add key="sm:EnableDynamicDiscovery" value="true" />
     <add key="sm:EngineType" value="" />
