--- a/.gitignore
+++ b/.gitignore
@@ -296,6 +296,8 @@ Kopie von*
 /src/Presentation/SmartStore.Web/App_Data/_temp/
 /src/Presentation/SmartStore.Web/App_Data/ExportProfiles/
 /src/Presentation/SmartStore.Web/App_Data/ImportProfiles/
+/src/Presentation/SmartStore.Web/App_Data/Indexing/
+/src/Presentation/SmartStore.Web/App_Data/Lucene/
 /src/Presentation/SmartStore.Web/App_Data/Settings.txt
 /src/Presentation/SmartStore.Web/App_Data/InstalledPlugins.txt
 /src/Presentation/SmartStore.Web/App_Data/Licenses.lic
