--- a/src/Presentation/SmartStore.Web/Config/log4net.config
+++ b/src/Presentation/SmartStore.Web/Config/log4net.config
@@ -11,6 +11,10 @@
     <!--<appender-ref ref="debug-file" />-->
   </root>
 
+  <logger name="Install">
+    <appender-ref ref="debugger"/>
+  </logger>
+
   <logger name="SmartStore">
     <!-- Messages coming from SmartStore are sent to the attached debugger. -->
     <appender-ref ref="debugger"/>
