--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -417,6 +417,10 @@
     <Compile Include="Migrations\201608110948010_MediaStorageData.Designer.cs">
       <DependentUpon>201608110948010_MediaStorageData.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609201852449_log4net.cs" />
+    <Compile Include="Migrations\201609201852449_log4net.Designer.cs">
+      <DependentUpon>201609201852449_log4net.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjectContextBase.SaveChanges.cs" />
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
@@ -774,6 +778,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201608110948010_MediaStorageData.resx">
       <DependentUpon>201608110948010_MediaStorageData.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609201852449_log4net.resx">
+      <DependentUpon>201609201852449_log4net.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
