--- a/src/Presentation/SmartStore.Web/Config/log4net.config
+++ b/src/Presentation/SmartStore.Web/Config/log4net.config
@@ -1,18 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<log4net>
+<log4net debug="true">
 
   <!-- If you are looking here and want more output, first thing to do is change root/priority/@value to "INFO" or "ALL". -->
 
   <root>
     <!-- Value of priority may be ALL, DEBUG, INFO, WARN, ERROR, FATAL, OFF. -->
     <priority value="DEBUG" />
-    <!--<appender-ref ref="database" />-->
+    <appender-ref ref="db" />
     <!--<appender-ref ref="error-file" />-->
-    <!--<appender-ref ref="debug-file" />-->
+    <appender-ref ref="debug-file" />
   </root>
 
-  <logger name="Install">
+  <logger name="Install" additivity="false">
+    <priority value="DEBUG" />
     <appender-ref ref="debugger"/>
+    <appender-ref ref="install-file"/>
   </logger>
 
   <logger name="SmartStore">
@@ -24,5 +26,122 @@
     <!-- Sends log messages to Visual Studio if attached. -->
     <immediateFlush value="true" />
     <layout type="log4net.Layout.SimpleLayout" />
+  </appender>
+
+  <appender name="install-file" type="SmartStore.Core.Logging.SmartFileAppender">
+    <file value="App_Data/Logs/install" />
+    <appendToFile value="true" />
+    <!-- Immediate flush on error log, to avoid data loss with sudden termination. -->
+    <immediateFlush value="true" />
+    <staticLogFileName value="false" />
+    <rollingStyle value="Date" />
+    <datepattern value="-yyyy.MM.dd'.log'" />
+    <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="%date - %level% %message%newline" />
+    </layout>
+  </appender>
+
+  <appender name="debug-file" type="SmartStore.Core.Logging.SmartFileAppender">
+    <file value="App_Data/Logs/smartstore-debug" />
+    <appendToFile value="true" />
+    <!-- Immediate flush on error log, to avoid data loss with sudden termination. -->
+    <immediateFlush value="true" />
+    <staticLogFileName value="false" />
+    <rollingStyle value="Date" />
+    <datepattern value="-yyyy.MM.dd'.log'" />
+    <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="%utcdate [%thread] %logger - %message [%identity %P{HttpMethod} %P{Url}]%newline" />
+    </layout>
+  </appender>
+  
+  <appender name="db" type="log4net.Appender.ADONetAppender">
+    <bufferSize value="1" />
+    <connectionString value="[RuntimeResolved]" />
+    <connectionType value="[RuntimeResolved]" />
+    <commandText value="INSERT INTO Log ([LogLevelId],[ShortMessage],[FullMessage],[IPAddress],[CustomerId],[PageUrl],[ReferrerUrl],[CreatedOnUtc],[Logger],[HttpMethod],[UserName]) 
+                 VALUES (@level, @message, @exception, @ip, @customerid, @url, @referrer, @createdon, @logger, @method, @user)" />
+    <parameter>
+      <parameterName value="@level" />
+      <dbType value="Int32" />
+      <layout type="log4net.Layout.RawPropertyLayout">
+        <key value="LevelId" />
+      </layout>
+    </parameter>
+    <parameter>
+      <parameterName value="@message" />
+      <dbType value="String" />
+      <size value="4000" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%message" />
+      </layout>
+    </parameter>
+    <parameter>
+      <parameterName value="@exception" />
+      <dbType value="String" />
+      <size value="-1" />
+      <layout type="log4net.Layout.ExceptionLayout" />
+    </parameter>
+    <parameter>
+      <parameterName value="@ip" />
+      <dbType value="String" />
+      <size value="200" />
+      <layout type="log4net.Layout.RawPropertyLayout">
+        <key value="Ip" />
+      </layout>
+    </parameter>
+    <parameter>
+      <parameterName value="@customerid" />
+      <dbType value="Int32" />
+      <layout type="log4net.Layout.RawPropertyLayout">
+        <key value="CustomerId" />
+      </layout>
+    </parameter>
+    <parameter>
+      <parameterName value="@url" />
+      <dbType value="String" />
+      <size value="500" />
+      <layout type="log4net.Layout.RawPropertyLayout">
+        <key value="Url" />
+      </layout>
+    </parameter>
+    <parameter>
+      <parameterName value="@referrer" />
+      <dbType value="String" />
+      <size value="500" />
+      <layout type="log4net.Layout.RawPropertyLayout">
+        <key value="Referrer" />
+      </layout>
+    </parameter>
+    <parameter>
+      <parameterName value="@createdon" />
+      <dbType value="DateTime" />
+      <layout type="log4net.Layout.RawUtcTimeStampLayout" />
+    </parameter>
+    <parameter>
+      <parameterName value="@logger" />
+      <dbType value="String" />
+      <size value="400" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%logger" />
+      </layout>
+    </parameter>
+    <parameter>
+      <parameterName value="@method" />
+      <dbType value="String" />
+      <size value="10" />
+      <layout type="log4net.Layout.RawPropertyLayout">
+        <key value="HttpMethod" />
+      </layout>
+    </parameter>
+    <parameter>
+      <parameterName value="@user" />
+      <dbType value="String" />
+      <size value="100" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%identity" />
+      </layout>
+    </parameter>
   </appender>
 </log4net>
