Minor config fixes

--- a/src/Presentation/SmartStore.Web/Config/log4net.config
+++ b/src/Presentation/SmartStore.Web/Config/log4net.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<log4net debug="true">
+<log4net debug="false">
 
   <!-- If you are looking here and want more output, first thing to do is change root/priority/@value to "INFO" or "ALL". -->
 
