--- a/src/Presentation/SmartStore.Web/Config/log4net.config
+++ b/src/Presentation/SmartStore.Web/Config/log4net.config
@@ -7,8 +7,8 @@
     <!-- Value of priority may be ALL, DEBUG, INFO, WARN, ERROR, FATAL, OFF. -->
     <priority value="DEBUG" />
     <appender-ref ref="db" />
-    <!--<appender-ref ref="error-file" />-->
     <appender-ref ref="debug-file" />
+    <!--<appender-ref ref="error-file" />-->
   </root>
 
   <logger name="Install" additivity="false">
@@ -57,7 +57,12 @@
   </appender>
   
   <appender name="db" type="log4net.Appender.ADONetAppender">
-    <bufferSize value="1" />
+    <bufferSize value="50" />
+    <filter type="log4net.Filter.LevelRangeFilter">
+      <acceptOnMatch value="true" />
+      <param name="LevelMin" value="INFO"/>
+      <param name="LevelMax" value="FATAL"/>
+    </filter>
     <connectionString value="[RuntimeResolved]" />
     <connectionType value="[RuntimeResolved]" />
     <commandText value="INSERT INTO Log ([LogLevelId],[ShortMessage],[FullMessage],[IPAddress],[CustomerId],[PageUrl],[ReferrerUrl],[CreatedOnUtc],[Logger],[HttpMethod],[UserName]) 
